--- a/notebooks/run_analysis.qmd
+++ b/notebooks/run_analysis.qmd
@@ -11,6 +11,7 @@ import GDAL, TOML
 import Cairo, Fontconfig # needed to render Gadfly to PNG
 import GeoFormatTypes as GFT
 import Dates: now
+import Serialization: serialize
 CONFIG = TOML.parsefile(joinpath(dirname(@__FILE__), "..", "config.toml"))
 DATA_PATH = CONFIG["data_path"]
 DATAAXLE_PATH = CONFIG["dataaxle_path"]
@@ -29,7 +30,7 @@ function flattento2d_chtype!(geom)
     # atm this shouldn't happen as flattento2d! returns its argument, but if #333 is fixed
     # we don't want to rely on implementation details.
     new_geom = ArchGDAL.flattento2d!(geom)
-    return ArchGDAL.IGeometry(GDAL.ogr_g_clone(new_geom.ptr))
+    return GC.@preserve new_geom ArchGDAL.IGeometry(GDAL.ogr_g_clone(new_geom.ptr))
 end
 ```
 
@@ -134,7 +135,7 @@ dest_points_unsnapped = @chain begin
     @subset! .!:snap_to_parcels
 end
 
-dest_points_unsnapped.geom = reproject(dest_points_unsnapped.geom, GFT.EPSG(4326), GFT.EPSG(32119), order=:trad)
+dest_points_unsnapped.geom = reproject(dest_points_unsnapped.geom, GFT.EPSG(4326), GFT.EPSG(32119), always_xy=true)
 
 metadata!(dest_points_unsnapped, "geometrycolumns", (:geom,))
 
@@ -187,13 +188,10 @@ GeoDataFrames.write(joinpath(DATA_PATH, "data", "destinations", "node_weights.gp
 
 ```{julia}
 algorithm_start = now()
-dfile = open("distances.bin", "w+")
+
+_, dfile = mktemp(cleanup=true)
 matrix = Mmap.mmap(dfile, Matrix{UInt16}, (nv(G), nv(G)); grow=true)
-```
 
-Do the routing
-
-```{julia}
 MissingLinks.fill_distance_matrix!(G, matrix; maxdist=MAX_DIST_M)
 ```
 
@@ -206,14 +204,13 @@ all_candidate_links = identify_potential_missing_links(G, matrix, 100, 1000)
 Deduplicate similar links
 
 ```{julia}
-candidate_links = deduplicate_links(all_candidate_links, matrix, 100)
+candidate_links = deduplicate_links(G, all_candidate_links, matrix, 100)
 ```
-
 
 ## Score the links
 
 ```{julia}
-scores = score_links(x -> x < 1609 * 2, candidate_links, matrix, origin_weights, dest_weights, 1609 * 2)
+scores = score_links(x -> x < 1609 * 2, G, candidate_links, matrix, origin_weights, dest_weights, 1609 * 2)
 ```
 
 ## Timing
@@ -253,19 +250,19 @@ mean(scores)
 ### Different cutoffs
 
 ```{julia}
-@time scores_1mi = score_links(x -> x < 1609, candidate_links, matrix, origin_weights, dest_weights, 1609)
-@time scores_3mi = score_links(x -> x < 1609 * 3, candidate_links, matrix, origin_weights, dest_weights, 1609 * 3)
+@time scores_1mi = score_links(x -> x < 1609, G, candidate_links, matrix, origin_weights, dest_weights, 1609)
+@time scores_3mi = score_links(x -> x < 1609 * 3, G, candidate_links, matrix, origin_weights, dest_weights, 1609 * 3)
 ```
 
 ### Gravity function
 
 ```{julia}
-const β = open(x -> read(x, Float64), joinpath(DATA_PATH, "beta.float64"))
+const β = open(x -> Base.read(x, Float64), joinpath(DATA_PATH, "beta.float64"))
 ```
 
 ```{julia}
 decayfunc(x) = x > MAX_DIST_M ? 0.0 : exp(β*x)
-@time scores_negexp = score_links(decayfunc, candidate_links, matrix, origin_weights, dest_weights, 5250)
+@time scores_negexp = score_links(decayfunc, G, candidate_links, matrix, origin_weights, dest_weights, 5250)
 ```
 
 ```{julia}
@@ -290,67 +287,17 @@ links_gis = links_to_gis(G, all_candidate_links)
 GeoDataFrames.write(joinpath(DATA_PATH, "data", "all_candidate_missing_links.gpkg"), links_gis; crs=GFT.EPSG(32119));
 ```
 
-
-## Service area example (for NCAMPO slides)
-
-Generate some service areas to better explain the algorithm.
+## Store for service area analysis
 
 ```{julia}
-edge_index = MissingLinks.index_graph_edges(G)
-```
-
-```{julia}
-sources = [
-    (name="North", geom=ArchGDAL.createpoint(444316.0,156853.7), link=1660),
-    (name="South", geom=ArchGDAL.createpoint(444000.5,156368.8), link=1660),
-]
-
-service_areas = DataFrame(Iterators.flatmap(sources) do source
-        [
-            (
-                name=source.name,
-                which="Before",
-                service_area(
-                    source.geom,
-                    G,
-                    matrix,
-                    1609 * 2,
-                    scores=dest_weights,
-                    edge_index=edge_index
-                )...
-            ),
-            (
-                name=source.name,
-                which="After",
-                service_area(
-                    source.geom,
-                    G,
-                    matrix,
-                    1609 * 2,
-                    scores=dest_weights,
-                    edge_index=edge_index,
-                    links=[candidate_links[source.link]]
-                )...
-            )
-        ]
-    end
+result = (
+    graph=G,
+    links=candidate_links,
+    scores_1mi=scores_1mi,
+    scores_2mi=scores,
+    scores_3mi=scores_3mi,
+    scores_negexp=scores_negexp
 )
 
-metadata!(service_areas, "geometrycolumns", (:geom,))
-
-sources = DataFrame(sources)
-metadata!(sources, "geometrycolumns", (:geom,))
-
-GeoDataFrames.write(joinpath(DATA_PATH, "paper", "figures", "service_area_origins.gpkg"), sources, crs=GFT.EPSG(32119))
-GeoDataFrames.write(joinpath(DATA_PATH, "paper", "figures", "service_areas.gpkg"), service_areas, crs=GFT.EPSG(32119))
+serialize(joinpath(DATA_PATH, "data", "link_data.jlobj"), result)
 ```
-
-```{julia}
-close(dfile)
-```
-
-
-```{julia}
-
-```
-
